# CodeSleuth

./: .env.example  .gitignore  CNAME  Dockerfile  README.md  main.py  pyproject.toml  requirements_streamlit.txt  streamlit_app.py  test_network.py
codesleuth/: agent.py  config.py
codesleuth/.adk/: session.db
codesleuth/agents/: analyst_agent.py  critic_agent.py  reporter_agent.py  scanner_agent.py  security_agent.py
codesleuth/mcp/: github_mcp_server.py
codesleuth/skills/code_smell_detection/: SKILL.md
codesleuth/tools/: code_analysis.py  osv_tools.py  security_patterns.py
deployment/: cloudrun.yaml
tests/: test_code_analysis.py  test_github_tools.py  test_hotspot.py  test_mcp_server.py  test_osv_tools.py  test_scanner_manual.py  test_security_patterns.py
tests/.adk/: session.db
