[project]
name = "codesleuth"
version = "0.1.0"
description = "Multi-agent GitHub repository auditor powered by Google ADK and Gemini"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=2.3.0",
    "httpx>=0.28.1",
    "mcp>=1.28.1",
    "pygithub>=2.9.1",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "radon>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: marks tests that require a real network/API connection (deselect with -m 'not network')",
]
